@@ -97,9 +97,12 @@
                     "id": {
                         "$ref": "#/definitions/uuid"
                     },
-                    "address": {
-                        "description": "A resolvable URI",
-                        "type": "string"
+                    "addresses": {
+                        "type": "array",
+                        "description": "The list of pointers to the places where the file is stored",
+                        "items": {
+                            "$ref": "#/definitions/resource_address"
+                        }
                     },
                     "mime_type": {
                         "description": "Link to mime type service.",
@@ -113,7 +116,7 @@
                         "type": "string"
                     },
                     "generation": {
-                        "description": "UUID of the activity that generated the representation. Must be described in the same registration file.",
+                        "description": "UUID of the activity that generated the resource. Must be described in the same registration file.",
                         "$ref": "#/definitions/uuid"
                     }
                 }
@@ -490,9 +493,12 @@
                                 "id": {
                                     "$ref": "#/definitions/uuid"
                                 },
-                                "address": {
-                                    "description": "A resolvable URI",
-                                    "type": "string"
+                                "addresses": {
+                                    "type": "array",
+                                    "description": "The list of pointers to the places where the file is stored",
+                                    "items": {
+                                        "$ref": "#/definitions/resource_address"
+                                    }
                                 },
                                 "mime_type": {
                                     "description": "Link to mime type service.",
@@ -743,6 +749,21 @@
                     "pattern": "^[0-9a-f]{32,40}$"
                 }
             }
+        },
+        "resource_address": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "The id by which the resource can be retrieved from the service. Use URLs if it's possible."
+                },
+                "storage": {
+                    "description": "The link to the ontology term that has the description of the services along with the its access parameters.",
+                    "$ref": "#/definitions/onto_term"
+                }
+            },
+            "additionalProperties": false
+
         }
+
     }
 }
